--- a/Gomoku.vcxproj.filters
+++ b/Gomoku.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="GameShow.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="SqList.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameLogic.h">
@@ -66,6 +69,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="Show.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="SqList.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
