+链式栈现在头结点用于储存栈的长度 +增加了平局事件及其相关检测
-所有onNotify函数加了对应事件检测，现在不会再发生一个事件导致所有onNotify函数全部执行了

*LkStack.h采用分离式编译了

--- a/Gomoku.vcxproj.filters
+++ b/Gomoku.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="SqList.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="LkStack.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameLogic.h">
