--- a/Gomoku.vcxproj
+++ b/Gomoku.vcxproj
@@ -143,6 +143,7 @@
     <ClCompile Include="GameShow.cpp" />
     <ClCompile Include="GameShow.h" />
     <ClCompile Include="LkList.cpp" />
+    <ClCompile Include="LkStack.cpp" />
     <ClCompile Include="Observer.cpp" />
     <ClCompile Include="GameLogic.cpp" />
     <ClCompile Include="Gomoku.cpp" />
